docs/_static/css/landing.css
/* ... */
.callout__list p{
  margin: 1em 0;
}

.callout::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  display: block;
  height: 8px;
  width: 100%;
  background-color: var(--blue);
}

.callout--purple::before {
  background-image: var(--viridis-purple);
}

.callout--blue::before {
  background-image: var(--viridis-blue);
}

.callout--teal::before {
  background-image: var(--viridis-teal);
}

.callout--green::before {
  background-image: var(--viridis-green);
}

.callout__icon {
  color: var(--pst-color-primary);
  font-size: 2em;
  margin: auto 10px auto 0;
}

.callout > * {
  margin-top: 0;
}
/* offsite links */
a.link--offsite {
  font-size: var(--pst-font-size-h5);
  display: block;
  position: relative;
  left: 0;
  transition: left 0.2s ease-in-out;
}

a.link--offsite::after {
  display: inline-block;
  font-style: normal;
  font-variant: normal;
  text-rendering: auto;
  -webkit-font-smoothing: antialiased;
  content: "\f061";
  font-family: "Font Awesome 5 Free";
  font-weight: 900;
  margin-left: 10px;
}
/* Rulers */
.rule {
  width: 100%;
  background-color: var(--pst-color-border);
  border: none;
  height: 1px;
  margin-bottom: 0em;
}

.rule--viridis {
  background-image: var(--viridis);
  height: 3px;
  margin-bottom: 0em;
}

/* Quicklinks */
.quicklinks {
  padding: 0;
  list-style-type: none;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  flex-wrap: wrap;
}

.quicklinks a {
  display: flex;
  flex-direction: column;
  align-items: center;
  flex: 1 1 100px;
}

.quicklinks a {
  color: var(--default-text);
  font-size: var(--heading-4);
  font-family: var(--heading-font);
}

.quicklinks__icon {
  width: 75px;
  display: block;
  margin-bottom: 10px;
}

@media (max-width: 700px) {
  .quicklink-icon {
    width: 60px;
  }
  .quicklinks a {
    font-size: var(--base-font);
  }
  .quicklinks li {
    margin-bottom: 20px;
  }
}

/* News */
.news {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  margin-bottom: 2em;
}

.news__item:not(:last-of-type){
  margin-bottom: 2em;
}

.news__item--highlight, .news__item:last-of-type {
  margin-bottom: 40px;
}

.news__item .date, .news__item--highlight .date{
  margin: 1em 0 .5em;
}

.news__item--highlight .title{
  margin: .5em 0 1em;
}

.date{
  font-size: small;
}
/* tab switcher */
.tools {
  min-height: 280px;
}

.tabs {
  padding: 0;
  padding: 0;
  list-style-type: none;
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  position: relative;
}

.tabs__tab {
  border: none;
  text-align: right;
  line-height: 1em;
  cursor: pointer;
  padding: 0.5em 0;
  background-color: transparent;
  font-family: var(--heading-font);
  color: var(--pst-color-link);
  font-size: var(--heading-4);
  font-weight: var(--bold);
  transition: left 0.2s ease-out;
  position: relative;
  left: 0;
}

.tabs__tab:hover {
  left: 8px;
}

.tabs__content {
  border-top: solid 1px var(--pst-color-border);
  border-bottom: solid 1px var(--pst-color-border);
  border-right: solid 1px var(--pst-color-border);
  flex-grow: 1;
  padding: 20px 40px 20px 50px;
  position: relative;
}

.tabs::before {
  content: "";
  width: 8px;
  height: 100%;
  background-color: var(--dark-purple);
  position: absolute;
  top: 0;
  right: -20px;
  display: block;
  transition: background-color 0.2s ease-in-out;
}

.tabs[data-current-tab="0"]::before {
  background-color: var(--dark-purple);
}

.tabs[data-current-tab="1"]::before {
  background-color: var(--purple);
}

.tabs[data-current-tab="2"]::before {
  background-color: var(--blue);
}

.tabs[data-current-tab="3"]::before {
  background-color: var(--teal);
}

.tabs[data-current-tab="4"]::before {
  background-color: var(--green);
}

.tabs::after {
  content: "";
  width: 0;
  height: 0;
  border-top: 9px solid transparent;
  border-left: 18px solid var(--purple);
  border-bottom: 9px solid transparent;
  position: absolute;
  right: -38px;
  top: 0;
  display: block;
  margin: 10% 0;
  transition: top 0.2s ease-out, border-left-color 0.2s ease-in-out;
}

.tabs[data-current-tab="0"]::after {
  top: 0;
  border-left-color: var(--dark-purple);
}

.tabs[data-current-tab="1"]::after {
  top: 20%;
  border-left-color: var(--purple);
}

.tabs[data-current-tab="2"]::after {
  top: 40%;
  border-left-color: var(--blue);
}

.tabs[data-current-tab="3"]::after {
  top: 60%;
  border-left-color: var(--teal);
}

.tabs[data-current-tab="4"]::after {
  top: 80%;
  border-left-color: var(--green);
}

/* footer */
footer {
  color: var(--alpha-white);
  background-image: var(--viridis-purple-vert);
}

footer a {
  color: var(--white);
}

footer h1 {
  color: var(--white);
}

ul.social {
  list-style-type: none;
  padding: 0;
  display: block;
  font-size: 18px;
}

ul.social li {
  display: inline-block;
  margin-right: 5px;
}
ul.social a {
  color: var(--white);
  transition: color 0.2 ease-in-out;
}
ul.social a:hover i {
  color: var(--alpha-white);
}

ul.mpl-links,
ul.release-docs {
  list-style-type: none;
  padding: 0;
  margin-top: 1.33em;
}

ul.mpl-links li,
ul.release-docs li {
  margin-bottom: 10px;
}

ul.mpl-links {
  font-weight: bold;
}

.release dt {
  font-family: var(--heading-font);
  font-size: var(--heading-5);
  text-transform: uppercase;
  letter-spacing: 1px;
}

.release dd {
  margin: 0;
}

@media (min-width: 650px) {
  .release dt,
  .release dd,
  ul.mpl-links {
    text-align: right;
  }
}

/* layout */
html, body {
    width: 100%;
    height: 100%;
}

.document {
    min-height: 100%;
    display: flex;
    flex-direction: column;
    align-items: stretch;
}

main {
  flex-grow: 1;
  display: grid;
  column-gap: 20px;
}
/* ... */

